add more query options to operating system controller
